<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1">

    <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:padding="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sessionTotalTime"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal" />

    <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chronometer"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:id="@+id/startStopSession"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startSession"/>

    <Button
            android:id="@+id/yummy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:textSize="50sp"
            android:text="@string/biteAccepted"
        android:layout_weight=".4" />
    <TableLayout
        android:padding="10dip"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:id="@+id/timerHeader"
                android:text="@string/biteNumberHeader"
                android:textSize="@dimen/table_text"
                android:paddingRight="@dimen/table_pad_small"
                android:paddingEnd="@dimen/table_pad_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/timeElapsedHeader"
                android:text="@string/elapsedTimeHeader"
                android:textSize="@dimen/table_text"
                android:paddingRight="@dimen/table_pad_small"
                android:paddingEnd="@dimen/table_pad_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/biteNumber"
                android:text="@string/biteNumber"
                android:textSize="@dimen/table_text"
                android:paddingRight="@dimen/table_pad_small"
                android:paddingEnd="@dimen/table_pad_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/timeElapsed"
                android:text="@string/chewTimeRemaining"
                android:textSize="@dimen/table_text"
                android:paddingRight="@dimen/table_pad_small"
                android:paddingEnd="@dimen/table_pad_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <TextView
            android:id="@+id/timingIntervalAnnounce"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:textSize="20sp"
            android:padding="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/todo1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/todo2" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/todo3" />

</LinearLayout>